error_mancer/tests/ui/missing_return_type.stderr
error: Function must have a return type of Result<Ok, Err>
 --> tests/ui/missing_return_type.rs:3:1
  |
3 | #[errors]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `errors` (in Nightly builds, run with -Z macro-backtrace for more info)
