error_mancer/tests/ui/missing_return_type.rs
use error_mancer::prelude::*;

#[errors]
fn foo() {}

fn main() {}
